# Agora

./: .gitignore  README.md  claude.md  deploy-railway.ps1  docker-compose.yml  tmpclaude-01b4-cwd
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml  railway-worker.toml  railway.toml  worker.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agents.py  alerts.py  analytics.py  assistant.py  auth.py  batch.py  campaigns.py  companies.py  conversations.py  dev.py  experiments.py  finance.py  goals.py  health.py  hr.py  integrations.py  legal.py  notifications.py  onboarding.py  sales.py  schedule_rules.py  scheduled_content.py  suggestions.py  support.py  tasks.py  templates.py  users.py  voice.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: __init__.py  base.py  company.py  conversation.py  invoice.py  notification.py  platform_credentials.py  schedule_rule.py  scheduled_content.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  batch.py  company.py  feedback.py  finance.py  integrations.py  notification.py  schedule_rule.py  scheduled_content.py  scheduling.py  task.py  user.py
backend/app/services/: cache.py  conversation_service.py  memory.py  notification_service.py  task_queue.py  website_analyzer.py
backend/app/services/agents/: __init__.py  ab_testing.py  base.py  brand_context.py  campaigns.py  enhanced_memory.py  memory.py  seasonal_context.py  suggestions.py
backend/app/services/assistant/: __init__.py  agent_state.py  context_service.py  flow_controller.py  intelligent_agent.py  llm_agents.py  router.py  user_preferences.py  ux_messages.py
backend/app/services/database/: __init__.py  indexes.py  mongodb.py  qdrant.py  redis.py
backend/app/services/integrations/: __init__.py  google_calendar.py  meta.py
backend/app/services/publishers/: __init__.py  base.py  facebook.py  instagram.py  linkedin.py  publication_worker.py
backend/app/services/scheduling/: __init__.py  batch_generator.py  intelligence.py  rule_executor.py
backend/app/services/voice/: __init__.py  speech_to_text.py  text_to_speech.py  voice_agent.py
backend/tests/: conftest.py  test_auth.py  test_companies.py  test_health.py  test_llm_agents.py  test_tasks.py  test_user_preferences.py  test_ux_improvements.py
(+143 files in other folders)
