[project]
name = "agora-backend"
version = "0.1.0"
description = "Agora - AI Agents Platform for SMBs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "email-validator>=2.1.0",
    "motor>=3.3.2",
    "redis>=5.0.1",
    "arq>=0.25.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "qdrant-client>=1.7.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "langchain-openai>=0.2.0",
    "openai>=1.10.0",
    "tavily-python>=0.3.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
